# DiceWare

./: CMakeLists.txt  Makefile  README.md  config.mk  diceware.cpp
