cmake_minimum_required(VERSION 3.0)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
project (diceware)
add_executable(${PROJECT_NAME} diceware.cpp)
find_package(sodium)
if (SODIUM_FOUND)
	include_directories (${SODIUM_INCLUDE_DIRS})
	target_link_libraries (diceware ${sodium_LIBRARY_RELEASE})
endif(SODIUM_FOUND)
